--- a/.gitignore
+++ b/.gitignore
@@ -34,6 +34,10 @@ config/credentials.json
 config/*.json
 *.json
 
+# Workspaces (보안상 중요)
+workspaces/*/config.json
+workspaces/*/credentials.json
+
 # Logs
 logs/*.log
 *.log
